force-app/main/default/objects/Knowledge_Article_Web__c/Knowledge_Article_Web__c.object-meta.xml
<CustomObject>
    <label>Knowledge Article Web</label>
    <nameField>
        <displayFormat>KAB -{0000000}</displayFormat>
        <label>Knowledge Article Web</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles Web</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>