force-app/main/default/objects/Knowledge_Article_Web__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>