force-app/main/default/objects/Knowledge_Article_Web__c/fields/Answer_Rich__c.field-meta.xml
<CustomField>
    <fullName>Answer_Rich__c</fullName>
    <label>Answer Rich</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>