force-app/main/default/objects/Knowledge_Article_Web__c/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Cruises</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Tours</fullName>
            </value>
            <value>
                <fullName>Book with credit</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Itinerary</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Placing an order</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Invoices and receipts</fullName>
            </value>
            <value>
                <fullName>Itinerary,Invoices and receipts</fullName>
                <isActive>false</isActive>
                <label>Itinerary,Invoices and receipts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>