force-app/main/default/objects/Knowledge_Article_Web__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Knowledge Articles Web</relationshipLabel>
    <relationshipName>Knowledge_Articles_Web</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>