force-app/main/default/objects/Knowledge_Article_Web__c/fields/Published_Status__c.field-meta.xml
<CustomField>
    <fullName>Published_Status__c</fullName>
    <formula>TEXT(Knowledge__r.PublishStatus )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Published Status</label>
    <type>Text</type>
</CustomField>