force-app/main/default/objects/Knowledge_Article_Web__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>