force-app/main/default/objects/Knowledge_Article_Web__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Visible_on_Website__c</columns>
    <columns>Answer_Rich__c</columns>
    <columns>Answer__c</columns>
    <columns>Published_Status__c</columns>
    <columns>Article_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>